<resources>
    <string name="app_name">MusicPlayer</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_activity_player_song">activity_player_song</string>
    <string name="title_activity_player_song">PlayerSongActivity</string>
    <string name="atras"><![CDATA[<<]]></string>
    <string name="adelante"><![CDATA[>>]]></string>
    <string name="play_pause"><![CDATA[>]]></string>
    <string name="time">00:00</string>
    <string name="title_activity_manager">ManagerActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_db">BASE DE DATOS</string>
</resources>
